# drake

./: Cargo.toml  LICENSE  README.md  SPEC.md  book.toml
.github/workflows/: deploy.yml  lint.yml  rust.yml  test.yml
doc/: language.md
docs/: language.md
drake-core/: Cargo.toml
drake-core/src/: files.rs  lib.rs  module.rs
drake-core/src/module/: parse.rs
drake-ir/: Cargo.toml
drake-ir/src/: lib.rs
drake-lexer/: Cargo.toml
drake-lexer/src/: identifier.rs  key.rs  lib.rs  literal.rs  number.rs  space.rs  symbol.rs  tests.rs  utils.rs
drake-lexer/src/identifier/: tests.rs
drake-lexer/src/key/: tests.rs
drake-lexer/src/literal/: number.rs  string.rs  tests.rs
drake-lexer/src/literal/number/: float.rs  integer.rs  tests.rs
drake-lexer/src/literal/number/float/: tests.rs
drake-lexer/src/literal/number/integer/: tests.rs
drake-lexer/src/literal/string/: tests.rs
drake-lexer/src/number/: float.rs  integer.rs  tests.rs
drake-lexer/src/space/: tests.rs
drake-lexer/src/symbol/: tests.rs
drake-lexer/src/utils/: test_utils.rs  tests.rs
drake-parser/: Cargo.toml
drake-parser/src/: expression.rs  key.rs  lib.rs  pattern.rs  statement.rs  test_utils.rs  token.rs
drake-parser/src/expression/: tests.rs
drake-parser/src/key/: tests.rs
drake-parser/src/pattern/: tests.rs
drake-parser/src/statement/: tests.rs
drake-parser/src/token/: tests.rs
drake-runtime/: Cargo.toml
drake-runtime/src/: lib.rs
drake-types/: Cargo.toml
drake-types/src/: ast.rs  error.rs  ir.rs  lib.rs  runtime.rs  token.rs
src/: SUMMARY.md  lex.rs  lexer.rs  top.md
src/lexer/: mod.rs  tests.rs
walnut-parser/: Cargo.toml
walnut-parser/src/: integer.rs  lib.rs  utils.rs
