[package]
name = "walnut"
version = "0.1.0"
description = "The Walnut Configuration Language"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/walnut"
categories = ["parser-implementations", "compilers"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
pom = "3.2"

[dev-dependencies]
indoc = "1.0"
