[package]
name = "drake"
version = "0.0.1"
description = "The Drake Configuration Language"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/drake"
categories = ["parser-implementations", "compilers"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[workspace]
members = [
  "drake-lexer",
]

[dependencies]
peg = "0.8"

[dev-dependencies]
indoc = "1.0"
