[package]
name = "drake-core"
version = "0.0.1"
edition = "2021"

[dependencies]
drake-types = { path = "../drake-types" }
drake-lexer = { path = "../drake-lexer" }
drake-parser = { path = "../drake-parser" }
drake-ir = { path = "../drake-ir" }
codespan-reporting = "0.11"
somen = "0.3.1"
somen-decode = "0.1"
futures-util = "0.3"
pin-project-lite = "0.2"
